Squished a buggo.

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
     flex: 1;
     margin: 10px;
     padding: 10px;
+    margin-bottom: 100px;
 }
 
 #spec{
